# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-23 17:21:02 GMT	John Goerzen <jgoerzen@complete.org>	patch-155

    Summary:
      Added size to the simple stat info
    Revision:
      missingh--head--0.7--patch-155


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs
     libsrc/MissingH/IO/HVFS/InstanceHelpers.hs


2004-12-23 17:11:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-154

    Summary:
      Eased encapsulation
    Revision:
      missingh--head--0.7--patch-154


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs


2004-12-23 17:06:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-153

    Summary:
      Added convenience functions
    Revision:
      missingh--head--0.7--patch-153


    new files:
     libsrc/MissingH/IO/HVFS/Utils.hs

    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs libsrc/MissingH/Path.hs


2004-12-23 02:53:10 GMT	John Goerzen <jgoerzen@complete.org>	patch-152

    Summary:
      Checkpointing nlst
    Revision:
      missingh--head--0.7--patch-152


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-23 01:52:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-151

    Summary:
      Added stat, syst
    Revision:
      missingh--head--0.7--patch-151


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-22 22:43:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-150

    Summary:
      Upload works
    Revision:
      missingh--head--0.7--patch-150


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-22 22:23:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-149

    Summary:
      FTP downloading works
    Revision:
      missingh--head--0.7--patch-149


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-22 22:17:09 GMT	John Goerzen <jgoerzen@complete.org>	patch-148
